add new website from server na

--- a/xem-phim-bo/pham-nhan-tu-tien/index.html
+++ b/xem-phim-bo/pham-nhan-tu-tien/index.html
@@ -1191,7 +1191,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1661,18 +1661,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/paul-su-do-cua-chua-kito" title="Paul, sứ đồ của chúa Kito">
+          <a class="list-top-movie-link" href="/phim-moi/tru-nuong-cuoi-cung" title="Trù Nương Cuối Cùng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/paul-su-do-cua-chua-kito-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tru-nuong-cuoi-cung-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Paul, sứ đồ của chúa Kito
+             Trù Nương Cuối Cùng
             </span>
             <span class="list-top-movie-item-en">
-             Paul, Apostle of Christ
+             末代厨娘
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1683,40 +1683,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/truong-ca-hanh" title="Trường Ca Hành">
+          <a class="list-top-movie-link" href="/phim-moi/ga-chan-de" title="Gã Chăn Dê">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/truong-ca-hanh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ga-chan-de-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Trường Ca Hành
+             Gã Chăn Dê
             </span>
             <span class="list-top-movie-item-en">
-             The Long Ballad
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ba-dam-thep" title="Bà Đầm Thép">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ba-dam-thep-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Bà Đầm Thép
-            </span>
-            <span class="list-top-movie-item-en">
-             The Iron Lady
+             Goats
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1727,21 +1705,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chuyen-gia-dinh" title="Chuyện gia đình">
+          <a class="list-top-movie-link" href="/phim-moi/la-may-tren-bau-troi-cua-ai-do" title="Là mây trên bầu trời của ai đó">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuyen-gia-inh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/la-may-tren-bau-troi-cua-ai-do-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chuyện gia đình
+             Là mây trên bầu trời của ai đó
             </span>
             <span class="list-top-movie-item-en">
-             A Family Affair
+             Side Seeing The Movie
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1749,18 +1727,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/duoi-sau-tac-dat-phan-1" title="Dưới sáu tấc đất (Phần 1)">
+          <a class="list-top-movie-link" href="/phim-moi/dai-tong-thieu-nien-chi-2" title="Đại Tống Thiếu Niên Chí 2">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/duoi-sau-tac-dat-phan-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dai-tong-thieu-nien-chi-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Dưới sáu tấc đất (Phần 1)
+             Đại Tống Thiếu Niên Chí 2
             </span>
             <span class="list-top-movie-item-en">
-             Six Feet Under (Season 1)
+             Young Blood 2
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/superman-nguoi-con-cong-san" title="Superman: Người Con Cộng Sản">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/superman-nguoi-con-cong-san-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Superman: Người Con Cộng Sản
+            </span>
+            <span class="list-top-movie-item-en">
+             Superman: Red Son
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
