--- a/xem-phim-bo/ve-dep-dich-thuc/index.html
+++ b/xem-phim-bo/ve-dep-dich-thuc/index.html
@@ -1191,7 +1191,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1716,62 +1716,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/huong-dan-vien-tinh-yeu" title="Hướng Dẫn Viên Tình Yêu">
+          <a class="list-top-movie-link" href="/phim-moi/am-sat-phong-bao" title="Ám Sát Phong Bạo">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/huong-dan-vien-tinh-yeu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/am-sat-phong-bao-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hướng Dẫn Viên Tình Yêu
+             Ám Sát Phong Bạo
             </span>
             <span class="list-top-movie-item-en">
-             Love Guide for Dumpees
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/mai-la-nguoi-thuong" title="Mãi là người thương">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mai-la-nguoi-thuong-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Mãi là người thương
-            </span>
-            <span class="list-top-movie-item-en">
-             Always Be My Maybe
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/uoc-muon-cua-ke-can-ba" title="Ước muốn của kẻ cặn bã">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/uoc-muon-cua-ke-can-ba-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Ước muốn của kẻ cặn bã
-            </span>
-            <span class="list-top-movie-item-en">
-             Scum's Wish
+             Death Notice
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1782,21 +1738,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/co-ban-gai-toi-khong-the-yeu" title="Cô Bạn Gái Tôi Không Thể Yêu">
+          <a class="list-top-movie-link" href="/phim-moi/co-nang-nguc-khung-jahee" title="Cô Nàng Ngực Khủng Jahee">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-ban-gai-toi-khong-the-yeu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-nang-nguc-khung-jahee-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cô Bạn Gái Tôi Không Thể Yêu
+             Cô Nàng Ngực Khủng Jahee
             </span>
             <span class="list-top-movie-item-en">
-             Miss Unlovable
+             가슴 큰 건물주 재희
             </span>
             <span class="list-top-movie-item-view">
-             4 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1804,21 +1760,65 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nu-nhan-vien-moi-xinh-dep" title="Nữ Nhân Viên Mới Xinh Đẹp">
+          <a class="list-top-movie-link" href="/phim-moi/that-lac" title="Thất lạc">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nu-nhan-vien-moi-xinh-dep-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/that-lac-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nữ Nhân Viên Mới Xinh Đẹp
+             Thất lạc
             </span>
             <span class="list-top-movie-item-en">
-             신입여사원 : 출장업무
+             LOST
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/cho-thue-linh-hon" title="Cho Thuê Linh Hồn">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cho-thue-linh-hon-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Cho Thuê Linh Hồn
+            </span>
+            <span class="list-top-movie-item-en">
+             Tsukumogami Kashimasu
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/my-boss-my-teacher" title="My Boss, My Teacher">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/my-boss-my-teacher-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             My Boss, My Teacher
+            </span>
+            <span class="list-top-movie-item-en">
+             My Boss, My Teacher
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
