add new website from server na

--- a/xem-phim-moi/vung-dat-linh-hon/index.html
+++ b/xem-phim-moi/vung-dat-linh-hon/index.html
@@ -1183,7 +1183,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1686,62 +1686,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/buoi-gap-go-dau-tien-phut-chia-ly-cuoi-cung" title="Buổi Gặp Gỡ Đầu Tiên, Phút Chia Ly Cuối Cùng">
+          <a class="list-top-movie-link" href="/phim-moi/khoang-cach-30-cm" title="Khoảng cách 30 cm">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/buoi-gap-go-dau-tien-phut-chia-ly-cuoi-cung-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khoang-cach-30-cm-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Buổi Gặp Gỡ Đầu Tiên, Phút Chia Ly Cuối Cùng
+             Khoảng cách 30 cm
             </span>
             <span class="list-top-movie-item-en">
-             To Love
-            </span>
-            <span class="list-top-movie-item-view">
-             7 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/mat-meo" title="Mắt mèo">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mat-meo-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Mắt mèo
-            </span>
-            <span class="list-top-movie-item-en">
-             Cat's Eye
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cuoc-doi-dao-nghich" title="Cuộc đời đảo nghịch">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-doi-dao-nghich-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Cuộc đời đảo nghịch
-            </span>
-            <span class="list-top-movie-item-en">
-             Transformation
+             30CM Distance
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1752,18 +1708,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/gia-nhu-em-biet" title="Giá như em biết">
+          <a class="list-top-movie-link" href="/phim-moi/sieu-ngoc-gap-nhau" title="Siêu Ngốc Gặp Nhau">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/gia-nhu-em-biet-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sieu-ngoc-gap-nhau-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Giá như em biết
+             Siêu Ngốc Gặp Nhau
             </span>
             <span class="list-top-movie-item-en">
-             If Only
+             Dumb and Dumber To
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/hoa-ra-em-rat-yeu-anh" title="Hóa Ra Em Rất Yêu Anh">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoa-ra-em-rat-yeu-anh-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Hóa Ra Em Rất Yêu Anh
+            </span>
+            <span class="list-top-movie-item-en">
+             Crush
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1774,21 +1752,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nguyen-vong-tri-mang" title="Nguyện Vọng Trí Mạng">
+          <a class="list-top-movie-link" href="/phim-moi/angels-with-dirty-faces" title="Angels with Dirty Faces">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguyen-vong-tri-mang-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/angels-with-dirty-faces-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nguyện Vọng Trí Mạng
+             Angels with Dirty Faces
             </span>
             <span class="list-top-movie-item-en">
-             Wisher
+             Angels with Dirty Faces
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/chu-cho-tay-tang" title="Chú Chó Tây Tạng">
+           <span class="status">
+            HD Vietsub + Thuyết Minh
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chu-cho-tay-tang-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Chú Chó Tây Tạng
+            </span>
+            <span class="list-top-movie-item-en">
+             The Tibetan Dog
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
