add new website from server na

--- a/xem-phim-moi/vung-dat-linh-hon/index.html
+++ b/xem-phim-moi/vung-dat-linh-hon/index.html
@@ -1183,7 +1183,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             5
+             6
             </dd>
             <br/>
            </dl>
@@ -1686,18 +1686,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/khoang-cach-30-cm" title="Khoảng cách 30 cm">
+          <a class="list-top-movie-link" href="/phim-moi/tap-lam-nguoi-xau-phan-3" title="Tập làm người xấu (Phần 3)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khoang-cach-30-cm-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tap-lam-nguoi-xau-phan-3-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Khoảng cách 30 cm
+             Tập làm người xấu (Phần 3)
             </span>
             <span class="list-top-movie-item-en">
-             30CM Distance
+             Breaking Bad (Season 3)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1708,40 +1708,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/sieu-ngoc-gap-nhau" title="Siêu Ngốc Gặp Nhau">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sieu-ngoc-gap-nhau-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Siêu Ngốc Gặp Nhau
-            </span>
-            <span class="list-top-movie-item-en">
-             Dumb and Dumber To
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hoa-ra-em-rat-yeu-anh" title="Hóa Ra Em Rất Yêu Anh">
+          <a class="list-top-movie-link" href="/phim-moi/adhura" title="Adhura">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoa-ra-em-rat-yeu-anh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/adhura-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hóa Ra Em Rất Yêu Anh
+             Adhura
             </span>
             <span class="list-top-movie-item-en">
-             Crush
+             Adhura
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1752,21 +1730,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/angels-with-dirty-faces" title="Angels with Dirty Faces">
+          <a class="list-top-movie-link" href="/phim-moi/hozuki-phu-ta-diem-vuong-phan-3" title="Hozuki: Phụ tá Diêm vương (Phần 3)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/angels-with-dirty-faces-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hozuki-phu-ta-diem-vuong-phan-3-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Angels with Dirty Faces
+             Hozuki: Phụ tá Diêm vương (Phần 3)
             </span>
             <span class="list-top-movie-item-en">
-             Angels with Dirty Faces
+             Hozuki's Coolheadedness (Season 3)
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1774,18 +1752,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chu-cho-tay-tang" title="Chú Chó Tây Tạng">
+          <a class="list-top-movie-link" href="/phim-moi/dao-hai-tac-10-the-gioi-suc-manh" title="Đảo Hải Tặc 10: Thế Giới Sức Mạnh">
            <span class="status">
-            HD Vietsub + Thuyết Minh
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chu-cho-tay-tang-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dao-hai-tac-10-the-gioi-suc-manh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chú Chó Tây Tạng
+             Đảo Hải Tặc 10: Thế Giới Sức Mạnh
             </span>
             <span class="list-top-movie-item-en">
-             The Tibetan Dog
+             One Piece: Strong World
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/star-trek-phan-2" title="Star Trek (Phần 2)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/star-trek-phan-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Star Trek (Phần 2)
+            </span>
+            <span class="list-top-movie-item-en">
+             Star Trek (Season 2)
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
