add new website from server na

--- a/xem-phim-moi/the-gioi-bi-mat-cua-arrietty/index.html
+++ b/xem-phim-moi/the-gioi-bi-mat-cua-arrietty/index.html
@@ -1183,7 +1183,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1686,18 +1686,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/1983" title="1983">
+          <a class="list-top-movie-link" href="/phim-moi/hoa-khoi-ben-hoi-truong" title="Hoa khôi bên hội trưởng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/1983-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoa-khoi-ben-hoi-truong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             1983
+             Hoa khôi bên hội trưởng
             </span>
             <span class="list-top-movie-item-en">
-             1983
+             Yes, My Lord.
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1708,18 +1708,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/shawn-mendes-truc-tiep-tai-buoi-hoa-nhac" title="Shawn Mendes: Trực tiếp tại buổi hòa nhạc">
+          <a class="list-top-movie-link" href="/phim-moi/tharntype-tu-ghet-toi-yeu-phan-1" title="TharnType: Từ ghét tới yêu (Phần 1)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/shawn-mendes-truc-tiep-tai-buoi-hoa-nhac-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tharntype-tu-ghet-toi-yeu-phan-1-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Shawn Mendes: Trực tiếp tại buổi hòa nhạc
+             TharnType: Từ ghét tới yêu (Phần 1)
             </span>
             <span class="list-top-movie-item-en">
-             Shawn Mendes: Live in Concert
+             TharnType the series (Season 1)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1730,21 +1730,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/star-of-tomorrow-huang-feihong" title="Star of Tomorrow: Huang Feihong">
+          <a class="list-top-movie-link" href="/phim-moi/truy-sat-phan-2" title="Truy sát (Phần 2)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/star-of-tomorrow-huang-feihong-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/truy-sat-phan-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Star of Tomorrow: Huang Feihong
+             Truy sát (Phần 2)
             </span>
             <span class="list-top-movie-item-en">
-             Star of Tomorrow: Huang Feihong
+             Wanted (Season 2)
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1752,21 +1752,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cocomelon-bai-hat-thieu-nhi-phan-3" title="Cocomelon: Bài hát thiếu nhi (Phần 3)">
+          <a class="list-top-movie-link" href="/phim-moi/duong-ve-gian-nan" title="Đường Về Gian Nan">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cocomelon-bai-hat-thieu-nhi-phan-3-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/duong-ve-gian-nan-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cocomelon: Bài hát thiếu nhi (Phần 3)
+             Đường Về Gian Nan
             </span>
             <span class="list-top-movie-item-en">
-             CoComelon (Season 3)
+             The Long Way Home
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1774,21 +1774,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dai-minh-ky-tuong-kinh-so-kiem-nghia" title="Đại Minh Kỳ Tướng: Kinh Sở Kiếm Nghĩa">
+          <a class="list-top-movie-link" href="/phim-moi/xac-song-tro-lai-3" title="Xác Sống Trở Lại 3">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dai-minh-ky-tuong-kinh-so-kiem-nghia-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xac-song-tro-lai-3-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đại Minh Kỳ Tướng: Kinh Sở Kiếm Nghĩa
+             Xác Sống Trở Lại 3
             </span>
             <span class="list-top-movie-item-en">
-             The General Yu Dayou
+             Return of the Living Dead III
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             5 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
